:lipstick: Fixed text color when dark mode

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -7,6 +7,7 @@ body {
       filter: invert(1) hue-rotate(180deg);
   }
   
+  em, strong,
   .course-list a strong {
     --fg-color-emphasis: #fff;
   }
